--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,13 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
     <script src="jquery.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
     <script type="text/javascript" src="login.js"></script>
     <script type="text/javascript" src="SettingsPage.js"></script>
     <script type="text/javascript" src="register.js"></script>
-    $.noConflict();
+<!--    $.noConflict();-->
 </head>
 
 <body>
@@ -149,9 +149,14 @@
             <input type="button" value="Let's play!" onclick="activateGame()">
         </container>
     </div>
-    <div class="content" id="About" style="display:none;">
-        hi5
-    </div>
+    <div class="content" id="About" class="modal" style="display:none;">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p> </p>
+            </div>
+
+        </div>
+
     <div class="content" id="Game" style="display:none;">
         <ul id="gameDetails">
             <li><c>SCORE: </c>
@@ -179,8 +184,18 @@
             <li> <img src="Images/pacmanLife.PNG" height="20px" width="20px"></li>
         </ul>
         <canvas id="canvas" height="600" width="1200"></canvas>
-        <br>
-        <input id="newGameButton" type="button" value="New Game!" onclick=startNewGame()>
+<!--        <canvas id="myCanvas" height="400" width="400" style="position: absolute; display: none; z-index: 1;"></canvas>-->
+        <br/>
+        <input type="button" value="New Game!" onclick=startNewGame()>
+    </div>
+    <!--Alert-->
+    <div id="dialogoverlay"></div>
+    <div id="dialogbox">
+        <div>
+            <div id="dialogboxhead"></div>
+            <div id="dialogboxbody"></div>
+            <div id="dialogboxfoot"></div>
+        </div>
     </div>
 
     <footer>
@@ -192,6 +207,7 @@
     var shape = new Object();
     var board;
     var score;
+    var foodLeftToEat;
     var pacLife;
     var pac_color;
     var start_time;
@@ -209,14 +225,13 @@
         this.currentTime = 0;
         this.play();
     }, false);
-    var lostGif=new Image();
+    var Alert = new CustomAlert();
 
 
     function startNewGame(){
         if(confirm('Are you sure you want to start a new game?')){
-            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
-            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
-            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
+            while( $('.image-gallery-lifes li').length <9)
+               $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
             toggle('Settings');
         }
 
@@ -240,6 +255,7 @@
         pac_color="Yellow";
         var cnt = 200;
         var food_remain = $('.range-slider input[type=range]').val();
+        foodLeftToEat= food_remain;
         var fivePointFood= Math.floor(0.6* food_remain);
         var fifteenPointFood= Math.floor(0.3* food_remain);
         var twentyFivePointFood= Math.ceil(0.1* food_remain);
@@ -309,7 +325,7 @@
     }
 
     function initiateMonsters(){
-        monsters.push(new monster(0,0,"Images/greenMonster.jpg"));
+        monsters.push(new monster(0,0,"Images/greenMonster.png"));
         monsters.push(new monster(0,9,"Images/yellowMonster.png"));
         monsters.push(new monster(19,0,"Images/redMonster.png"));
     }
@@ -419,8 +435,10 @@
                 else if (board[i][j] === 4) {
                     context.beginPath();
                     context.rect(center.x -30,center.y-30, 60, 60);
-                    context.fillStyle = "lightskyblue"; //color
-                    context.fill();
+                    // context.fillStyle = "lightskyblue"; //color
+                    // context.fill();
+                    context.strokeStyle = "rosybrown";
+                    context.stroke();
                 }//draw life
                 else if (board[i][j]===6){
                     var img= new Image();
@@ -485,12 +503,15 @@
         }
         if (board[shape.i][shape.j] === 1) {
             score+=25;
+            foodLeftToEat--;
         }
         if (board[shape.i][shape.j] === 3){
             score+=15;
+            foodLeftToEat--;
         }
         if (board[shape.i][shape.j] === 5){
             score+=5;
+            foodLeftToEat--;
         }
         if (board[shape.i][shape.j] === 6){ //pacman got life
             $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
@@ -505,7 +526,7 @@
         var currentTime = new Date();
         time_elapsed = (currentTime - start_time) / 1000;
         //handle end of game
-        if (!checkEndGame() && !checkEndTime()){
+        if (!checkEndGame() && !checkEndTimeAndFood()){
             Draw();
         }
     }
@@ -515,31 +536,49 @@
             window.clearInterval(interval);
             window.clearInterval(monsterInterval);
             backgroundAudio.pause();
-            alert("You Lost!");
+            // popup("Loser!");
+            // var lose_image = new Image();
+            // lose_image.src = "Images/gif-you-lost.gif";
+            Alert.render("<img src='Images/gif-you-lost.gif' width='400' height='400'>");
+            // alert("You Lost!");
             return true;
         }
         return false;
-
     }
-    function checkEndTime(){
+
+    function checkEndTimeAndFood(){
         var gameTime= $('input[name=gameTime]').val();
         if(time_elapsed>= gameTime) {
             window.clearInterval(interval);
             window.clearInterval(monsterInterval);
             backgroundAudio.pause();
             if (score < 150)
-                alert("You can do better than " + score + " points");
+                Alert.render("You can do better than" + score + "points!");
             else
-                alert("We have a Winner!!!")
+            {
+                Alert.render("<img src='Images/winner.gif' width='400' height='400'>");
+            }
+            return true;
+        }
+        if (foodLeftToEat === 0){
+
+            Alert.render("<img src='Images/winner.gif' width='400' height='400'>");
             return true;
         }
         return false;
-
     }
 
     function checkWalls(i,j){
-        return (i === 3 && j === 3) || (i === 3 && j === 4) || (i === 3 && j === 5) || (i === 6 && j === 1) || (i === 6 && j === 2)
-            || (i === 6 && j === 4) || (i === 6 && j === 5);
+        return (i === 1 && j === 2) || (i === 1 && j === 3) || (i === 4 && j === 1) || (i === 5 && j === 1) || (i === 6 && j === 1)
+            || (i === 6 && j === 2) || (i === 9 && j === 0) || (i === 6 && j === 0) || (i === 10 && j === 0) || (i === 10 && j === 1)
+            || (i === 13 && j === 1) || (i === 13 && j === 2) || (i === 14 && j === 1) || (i === 15 && j === 1) || (i === 18 && j === 2)
+            || (i === 18 && j === 3) || (i === 8 && j === 4) || (i === 9 && j === 4) || (i === 10 && j === 4) || (i === 11 && j === 4)
+            || (i === 1 && j === 5) || (i === 2 && j === 5) || (i === 3 && j === 5) || (i === 4 && j === 5) || (i === 9 && j === 5)
+            || (i === 15 && j === 5) || (i === 16 && j === 5) || (i === 17 && j === 5) || (i === 18 && j === 5) || (i === 11 && j === 0)
+            || (i === 8 && j === 6) || (i === 9 && j === 6) || (i === 10 && j === 6) || (i === 11 && j === 6) || (i === 5 && j === 7)
+            || (i === 14 && j === 7) || (i === 2 && j === 8) || (i === 3 && j === 8) || (i === 4 && j === 8) || (i === 14 && j === 8)
+            || (i === 15 && j === 8) || (i === 16 && j === 8) || (i === 17 && j === 8) || (i === 9 && j === 9) || (i === 10 && j === 8)
+            || (i === 5 && j === 8) || (i === 10 && j === 9) || (i === 11 && j === 9);
     }
 
     function moveGohsts() {
@@ -657,6 +696,27 @@
         else {
             backgroundAudio.pause();
             backgroundAudio.currentTime=0;
+        }
+    }
+
+    function CustomAlert(){
+        this.render = function(dialog){
+            var winW = window.innerWidth;
+            var winH = window.innerHeight;
+            var dialogoverlay = document.getElementById('dialogoverlay');
+            var dialogbox = document.getElementById('dialogbox');
+            dialogoverlay.style.display = "block";
+            dialogoverlay.style.height = winH+"px";
+            dialogbox.style.left = (winW/2) - (550 * .5)+"px";
+            dialogbox.style.top = "100px";
+            dialogbox.style.display = "block";
+            document.getElementById('dialogboxhead').innerHTML = "ohhh";
+            document.getElementById('dialogboxbody').innerHTML = dialog;
+            document.getElementById('dialogboxfoot').innerHTML = '<button onclick="Alert.ok()">OK</button>';
+        }
+        this.ok = function(){
+            document.getElementById('dialogbox').style.display = "none";
+            document.getElementById('dialogoverlay').style.display = "none";
         }
     }
 
